--- a/.env.template
+++ b/.env.template
@@ -1,14 +1,22 @@
+# Преобразуются в булево
+PRODUCTION= # Флаг запуска на production
+DOCKER=     # Флаг запуска в докере
+
+# Настройки СУБД
+# Обязательны если установлен DOCKER
 DB_NAME=postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres 
 DB_HOST=db
 DB_PORT=5432
-DOCKER=
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres 
+
+# Отправка почты
+# Используются если установлен PRODUCTION 
 EMAIL_HOST=
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
-EMAIL_PORT=587
+EMAIL_PORT=
 SECRET_KEY=
-PRODUCTION=
-PORT=5432
+
+# Имя домена для NGINX
 DOMAIN=127.0.1.1
