--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
     env_file:
       - ./.env
   nginx:
-    image: nginx
+    image: nginx:1.19.6
     container_name: nginx
     restart: always
     ports:
